[package]
name = "gtkr"
version = "0.1.0"
authors = ["Nemin32 <pergerlori@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curl = "0.4.34"
serde_json = "1.0.61"
serde = "1.0.123"
glib = "0.10.3"
zip = "0.5.9"

[dependencies.gtk]
version = "0.9.0"
features = ["v3_16"]

[dependencies.gio]
version = ""
features = ["v2_44"]
